--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" href="/favicon.ico" />
+		<link rel="icon" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<link rel="apple-touch-icon" href="/pwa-192x192.png" />
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00aba9" />
-		<meta name="msapplication-TileColor" content="#00aba9" />
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#111827" />
+		<meta name="msapplication-TileColor" content="#111827" />
+		<meta name="theme-color" content="#111827" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +17,7 @@
 			rel="stylesheet"
 		/>
 
-		<title>Vite App</title>
+		<title>EzShare</title>
 	</head>
 	<body>
 		<div id="app"></div>
